tests/passes/well-formed/external-type-mismatch.expect
---CODE---
1
---STDERR---
Error: tests/passes/well-formed/external-type-mismatch.futil
32 |      invoke f[m = k1]()();
   |      ^^^^^^^^^^^^^^^^^^^^^ Malformed Control: unmatching binding values for fed_in external cell, expected WIDTH to be 32, instead got 16
